# hft-recorder

./: .clangd  .env.example  .gitignore  .graphifyignore  AGENTS.md  CMakeLists.txt  LOCAL_EXCHANGE_FUTURE_PLAN.md  MARKET_DATA_GUI_AUDIT_2026-06-20.md  MARKET_DATA_GUI_AUDIT_2026-06-21.md  README.md  RUN_LOCAL_VENUE_WS_GUIDE.md  RUN_MARKER_API_GUIDE.md  compile.sh  fileplan.md  run.sh
src/: AGENTS_HANDOFF.md  CMakeLists.txt
src/app/: CMakeLists.txt  analyze_cli.cpp  benchmark_cli.cpp  capture_cli.cpp  history_cli.cpp  main.cpp  metrics_bootstrap.cpp  metrics_bootstrap.hpp  preset_runner_cli.cpp  recordings_cli.cpp  report_export.cpp  shard_run_cli.cpp  tui_cli.cpp
src/core/: CMakeLists.txt  recorder_api.cpp
src/core/arbitrage/: BookTickerSpread.cpp  BookTickerSpread.hpp  BookTickerSpreadMean.cpp  BookTickerSpreadMean.hpp  CandleSpread.cpp  CandleSpread.hpp  PriceBasis.hpp  SpreadDirection.hpp
src/core/backtest/: BacktestRunner.cpp  BacktestRunner.hpp
src/core/block/: BlockHeader.cpp  BlockHeader.hpp  BlockReader.cpp  BlockReader.hpp  BlockWriter.cpp  BlockWriter.hpp  FileHeader.cpp  FileHeader.hpp
src/core/capture/: Candles2BulkState.cpp  Candles2BulkState.hpp  CaptureChannelSupport.cpp  CaptureChannelSupport.hpp  CaptureCoordinator.cpp  CaptureCoordinator.hpp  CaptureCoordinatorBulk.cpp  CaptureCoordinatorInternal.cpp  CaptureCoordinatorInternal.hpp  CaptureCoordinatorOffline.cpp  CaptureCoordinatorRuntime.cpp  CaptureCoordinatorRuntimeHelpers.hpp  CaptureCoordinatorRuntimeLoops.cpp  ChannelJsonWriter.cpp  ChannelJsonWriter.hpp  ChannelKind.hpp  JsonSerializers.cpp  JsonSerializers.hpp  SessionId.cpp  SessionId.hpp  SessionManifest.cpp  SessionManifest.hpp  SupportArtifacts.cpp  SupportArtifacts.hpp
src/core/codec/: Crc32c.cpp  Crc32c.hpp  VarInt.cpp  VarInt.hpp  ZigZag.hpp
src/core/common/: Integrity.hpp  JsonString.hpp  Log.cpp  Log.hpp  MiniJsonParser.hpp  PrimitiveAliases.hpp  Status.hpp  Timing.hpp  constants.hpp
src/core/corpus/: CorpusLoader.cpp  CorpusLoader.hpp  InstrumentMetadata.cpp  InstrumentMetadata.hpp  LoadReport.hpp  SessionCorpus.hpp
src/core/cxet_bridge/: CxetCaptureBridge.cpp  CxetCaptureBridge.hpp
src/core/dataset/: PipelineProfile.hpp  StreamFamily.hpp
src/core/execution/: ExecutionVenue.cpp  ExecutionVenue.hpp
src/core/finam/: FinamEnvSync.cpp  FinamEnvSync.hpp
src/core/history/: BinanceVisionFormat.cpp  BinanceVisionFormat.hpp  ZipReader.cpp  ZipReader.hpp
src/core/lab/: BookFrame.hpp  BookFrameSampler.cpp  BookFrameSampler.hpp  LabRunner.cpp  LabRunner.hpp  PipelineDescriptor.hpp  PipelineResult.hpp  RankingEngine.cpp  RankingEngine.hpp
src/core/local_exchange/: LocalExchangeServer.cpp  LocalExchangeServer.hpp  LocalMarketDataBus.cpp  LocalMarketDataBus.hpp  LocalOrderEngine.cpp  LocalOrderEngine.hpp  LocalReplayRunner.cpp  LocalReplayRunner.hpp
src/core/market_data/: MarketDataIngress.hpp
src/core/metrics/: Metrics.cpp  Metrics.hpp
src/core/replay/: BookState.cpp  BookState.hpp  CxetReplaySessionLoader.cpp  CxetReplaySessionLoader.hpp  EventRows.hpp  JsonLineParser.cpp  JsonLineParser.hpp  SessionReplay.cpp  SessionReplay.hpp  SessionReplayTimeline.cpp
src/core/representation/: DeltaBookTicker.hpp  DeltaOrderBook.hpp  DeltaTrade.hpp
src/core/storage/: EventStorage.cpp  EventStorage.hpp  JsonSessionStorage.cpp  JsonSessionStorage.hpp
src/core/stream/: SpscRing.hpp  StreamRecorder.hpp
src/core/tui/: RecorderTuiLaunch.cpp  RecorderTuiLaunch.hpp  RecorderTuiPreset.cpp  RecorderTuiPreset.hpp  RecorderTuiShard.cpp  RecorderTuiShard.hpp  RecorderTuiSymbols.cpp  RecorderTuiSymbols.hpp  TerminalRender.cpp  TerminalRender.hpp
src/core/validation/: AccuracyClass.hpp  ValidationResult.hpp  ValidationRunner.cpp  ValidationRunner.hpp
src/gui/: CMakeLists.txt
src/gui/api/: ChartApiServer.cpp  ChartApiServer.hpp  ExecutionChartAdapter.cpp  ExecutionChartAdapter.hpp  LocalMarketDataWsServer.cpp  LocalMarketDataWsServer.hpp  LocalVenueOrderParser.hpp  LocalVenueWsServer.cpp  LocalVenueWsServer.hpp
src/gui/app/: main.cpp
src/gui/backtests/: BacktestBatchAnalysisHelpers.cpp  BacktestBatchAnalysisHelpers.hpp  BacktestBatchSweepHelpers.cpp  BacktestBatchSweepHelpers.hpp  BacktestExecutionConfigHelpers.cpp  BacktestExecutionConfigHelpers.hpp  BacktestResultHelpers.cpp  BacktestResultHelpers.hpp  BacktestSessionHelpers.cpp  BacktestSessionHelpers.hpp  BacktestSessionSummary.cpp  BacktestSessionSummary.hpp  BacktestStrategyConfigHelpers.cpp  BacktestStrategyConfigHelpers.hpp  BacktestSweepHelpers.cpp  BacktestSweepHelpers.hpp  BacktestViewModel.cpp  BacktestViewModel.hpp  BacktestViewModelBatch.cpp  BacktestViewModelConfig.cpp  BacktestViewModelResults.cpp
src/gui/models/: BacktestSessionSummary.cpp  BacktestSessionSummary.hpp  SessionListModel.cpp  SessionListModel.hpp  ViewerSourceListModel.cpp  ViewerSourceListModel.hpp
src/support/: CMakeLists.txt
src/variants/: CMakeLists.txt
tests/bench/: CMakeLists.txt  recorder_memory_soak.cpp
tests/unit/: CMakeLists.txt  test_backtest_runner.cpp  test_backtest_viewmodel.cpp  test_basis_chain_manifest.cpp  test_book_state.cpp  test_bookticker_exactness.cpp  test_bookticker_spread.cpp  test_candle_spread.cpp  test_candles2_bulk_state.cpp  test_capture_channel_support.cpp  test_capture_cli.cpp  test_capture_coordinator.cpp  test_capture_serializers.cpp  test_capture_viewmodel_requests.cpp  test_chart_markers.cpp  test_corpus_loader.cpp  test_cxet_capture_bridge.cpp  test_event_storage.cpp  test_history_binance_vision.cpp  test_identity_codec.cpp  test_json_line_parser.cpp  test_local_exchange_server.cpp  test_local_order_engine.cpp  test_local_venue_ws_order_parser.cpp  test_moex_basis_series.cpp  test_rate_limit_usage.cpp  test_recorded_render_once.cpp  test_recorder_api.cpp  test_recording_discovery.cpp  test_session_replay.cpp  test_smoke.cpp  test_strategy_indicator.cpp  test_strategy_overlay.cpp  test_tui_launch.cpp  test_tui_preset.cpp  test_tui_shard.cpp  test_tui_symbols.cpp  test_tui_terminal_render.cpp  test_validation_runner.cpp  test_venue_colors.cpp  (+3 more)
(+1175 files in other folders)
